vm/jvmti/StopThread/stop001/stop00103 crashes with SIGSEGV in Continuation::is_continuation_mounted

XMLWordPrintable

    • b15
    • x86_64
    • linux

      The following test failed in the JDK20 CI:

      vm/jvmti/StopThread/stop001/stop00103/stop00103.html

      Here's a snippet from the log file:

      #section:script_messages
      ----------messages:(1/24)----------
      Executing test class...

      #section:testExecute
      ----------messages:(1/975)----------
      command: com.sun.jck.lib.ExecJCKTestOtherJVMCmd LD_LIBRARY_PATH=/opt/mach5/mesos/work_dir/jib-master/install/jck/20/b01/extra/bundles/JCK-extra-20.zip/JCK-extra-20/binaries/linux-amd64/lib /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+14-899/linux-x64.jdk/jdk-20/bin/java --enable-preview -Djava.awt.headless=true -XX:MaxRAMPercentage=4.16667 --show-version -Xms32m -Xmx1024m -Djdk.attach.allowAttachSelf=true -Djava.security.properties=/opt/mach5/mesos/work_dir/jib-master/install/jck/20/b01/extra/bundles/JCK-extra-20.zip/JCK-extra-20/extra.security.properties -agentlib:jckjvmti=stop00103 -classpath :/opt/mach5/mesos/work_dir/jib-master/install/jck/20/b01/bundles/JCK-runtime-20.jar/JCK-runtime-20/classes: -Djava.security.policy=/opt/mach5/mesos/work_dir/jib-master/install/jck/20/b01/bundles/JCK-runtime-20.jar/JCK-runtime-20/lib/jck.policy javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103 -platform.jvmtiSupported true -platform.nativeLibsLinkage dynamic
      ----------out1:(0/0)----------
      ----------out2:(21/1487)----------
      java 20-ea 2023-03-21
      Java(TM) SE Runtime Environment (build 20-ea+14-899)
      Java HotSpot(TM) 64-Bit Server VM (build 20-ea+14-899, mixed mode, sharing)
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007ff95767d9c8, pid=2630760, tid=2630763
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+14) (build 20-ea+14-899)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (20-ea+14-899, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x6339c8] Continuation::is_continuation_mounted(JavaThread*, oopDesc*)+0x38
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S55557/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3c73cf45-46cc-42ef-907b-98cdd02b112b/runs/982df45b-744d-442b-a270-68b3949358df/testoutput/test-support/jck_runtime_vm_jvmti/core.2630760)
      #
      # An error report file with more information is saved as:
      # /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S55557/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3c73cf45-46cc-42ef-907b-98cdd02b112b/runs/982df45b-744d-442b-a270-68b3949358df/testoutput/test-support/jck_runtime_vm_jvmti/hs_err_pid2630760.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      result: Failed. unexpected exit code: exit code 134

      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x00007ff9500280d0): JavaThread "main" [_thread_in_vm, id=2630763, stack(0x00007ff958eb7000,0x00007ff958fb8000)] _threads_hazard_ptr=0x00007ff8fc080a00

      Stack: [0x00007ff958eb7000,0x00007ff958fb8000], sp=0x00007ff958fb66c0, free space=1021k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x6339c8] Continuation::is_continuation_mounted(JavaThread*, oopDesc*)+0x38
      V [libjvm.so+0xa92a2f] JvmtiEnvBase::get_threadOop_and_JavaThread(ThreadsList*, _jobject*, JavaThread**, oopDesc**)+0x20f
      V [libjvm.so+0xa8365c] JvmtiEnv::StopThread(_jobject*, _jobject*)+0x5c
      V [libjvm.so+0xa3560e] jvmti_StopThread+0x15e
      C [libjckjvmti.so+0x96e00] Java_javasoft_sqe_tests_vm_jvmti_stop001_stop00103_stop00103_StopThread+0x7a
      j javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103.StopThread(Ljava/lang/Thread;Ljavasoft/sqe/tests/vm/jvmti/stop001/stop00103/Exc;)I+0
      j javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103.run([Ljava/lang/String;Ljava/io/PrintStream;)I+46
      j javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103.main([Ljava/lang/String;)V+8
      v ~StubRoutines::call_stub 0x00007ff94052bcc6
      V [libjvm.so+0x8a3345] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x315
      V [libjvm.so+0x94b2ea] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x3ea
      V [libjvm.so+0x94dfe2] jni_CallStaticVoidMethod+0x152
      C [libjli.so+0x467b] JavaMain+0xd1b
      C [libjli.so+0x7c39] ThreadJavaMain+0x9

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103.StopThread(Ljava/lang/Thread;Ljavasoft/sqe/tests/vm/jvmti/stop001/stop00103/Exc;)I+0
      j javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103.run([Ljava/lang/String;Ljava/io/PrintStream;)I+46
      j javasoft.sqe.tests.vm.jvmti.stop001.stop00103.stop00103.main([Ljava/lang/String;)V+8
      v ~StubRoutines::call_stub 0x00007ff94052bcc6

      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000009

            Assignee:
            Serguei Spitsyn
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: